--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 			<h2>Tasks</h2>
 			<div id="tasks"></div>
     </div>
+
+<a href="index2.html">
+  <button>Assignment 2 - html</button>
+</a>
+	
 	<script>
     
 	const form = document.querySelector("#to_do_form");
